--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <p><a class="btn" href="services.html">View details &raquo;</a></p>
        </div>
         <div class="span4">
-          <h2>Heading</h2>
+          <h2>Contact Us</h2>
           <p>Redness Tech prides itself on its responsiveness to expressions of interest or enquiries. Please use the details below if you want to get in touch.</p>
           <p><a class="btn" href="contact.html">Contact Us &raquo;</a></p>
         </div>
