Put in redness tech copyright

--- a/services.html
+++ b/services.html
@@ -138,7 +138,7 @@
       <hr>
 
       <div class="footer">
-        <p>&copy; Company 2013</p>
+        <p>&copy; Redness Tech 2013</p>
       </div>
 
     </div> <!-- /container -->
