Made contact page look better

--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,9 @@
 
       <div class="row-fluid">
         <div class="span8 offset2">
-        	<p class='lead'>Redness Tech prides itself on its responsiveness to expressions of interest or enquiries. Please use the details below if you want to get in touch.</p>
+        	<h2>Contact us</h2>
+        	<p>Redness Tech prides itself on its responsiveness to expressions of interest or enquiries.</p>
+        	<p>Please use the details below if you want to get in touch.</p>
 			<table class='table'>
 				<tr>
 					<th>Contact</th>
