--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
 	<div class="row-fluid">
         <div class="span8 offset2">
           <h2>About Redness Tech</h2>
-          <p class="muted" style="font-style:italic;text-align:center">Delivering effictive, thoughtful and cost effective business solutions to descerning customers</p>
+          <p class="muted" style="font-style:italic;text-align:center">Delivering effictive, thoughtful and cost effective business solutions to discerning customers</p>
           <p>Redness Tech is a small technology business focussed on delivering quality innovative solutions to your buisness. The business started when a need presented itself at a pizza shop for managing staff availability, and Redness Tech built the solution.</p>
           <p>Redness Tech has strong capabilities in web development especially where is comes to building business solutions. In addition, we have extensive engineering expertise in system deployment and integration and offer these services to out customers</p>
           <p> If you want to find out more about Redness Tech, please <a href="contact.html">Contact Us &raquo;</a></p>
