--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="jumbotron">
         <!-- <h1>Redness Tech</h1> -->
         <img src='rednesstechlogo.jpg' style="height:180px;" />
-        <p class="lead">Delivering effictive, thoughtful and cost effective business solutions to descerning customers</p>
+        <p class="lead">Delivering effictive, thoughtful and cost effective business solutions to discerning customers</p>
         <div id="facebook" style="text-align:center">
 			<iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FRedness-Tech%2F192327397451914&amp;layout=standard&amp;show_faces=false&amp;width=560&amp;action=like&amp;font=arial&amp;colorscheme=light&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:200px; height:35px;" allowTransparency="true"></iframe>
 		</div>
