--- a/index.html
+++ b/index.html
@@ -160,5 +160,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+    <!--test-->
   </body>
 </html>
