--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
       <!-- Jumbotron -->
       <div class="jumbotron">
         <!-- <h1>Redness Tech</h1> -->
-        <img src='rednesstechlogo.jpg' style="height:180px;" />
+        <img src='{{ site.path }}/rednesstechlogo.jpg' style="height:180px;" />
         <p class="lead">Delivering effective, thoughtful and cost effective business solutions to discerning customers</p>
         <div id="facebook" style="text-align:center">
 			<iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FRedness-Tech%2F192327397451914&amp;layout=standard&amp;show_faces=false&amp;width=560&amp;action=like&amp;font=arial&amp;colorscheme=light&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:200px; height:35px;" allowTransparency="true"></iframe>
@@ -21,16 +21,16 @@ layout: default
         <div class="span4">
           <h2>redbook.me</h2>
 			<p>A simple tool to build rosters and manage the availability of your staff online.</p>
-          <p><a class="btn" href="products.html">View details &raquo;</a></p>
+          <p><a class="btn" href="{{ site.path }}/products.html">View details &raquo;</a></p>
         </div>
         <div class="span4">
           <h2>Services</h2>
           <p>Redness Tech offers a number of services around web application development, system integration and engineering</p>
-          <p><a class="btn" href="services.html">View details &raquo;</a></p>
+          <p><a class="btn" href="{{ site.path }}/services.html">View details &raquo;</a></p>
        </div>
         <div class="span4">
           <h2>Contact Us</h2>
           <p>Redness Tech prides itself on its responsiveness to expressions of interest or enquiries. Please use the details below if you want to get in touch.</p>
-          <p><a class="btn" href="contact.html">Contact Us &raquo;</a></p>
+          <p><a class="btn" href="{{ site.path }}/contact.html">Contact Us &raquo;</a></p>
         </div>
       </div>
