--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 		</div>
       </div>
 
-      <hr>
+      <hr><!--  Test -->
 
       <!-- Example row of columns -->
       <div class="row-fluid">
